[Update] [UMA-542]: Filter partner